# slack-clone-backend

./: .env.dev  .gitignore  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  ruff.toml
app/: main.py
app/core/: arq_worker.py  config.py  database.py  deps.py  logger.py  models.py  redis.py  response.py  routes.py  schemas.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 2025-06-23_initialization.py  2025-07-04_change_files_field.py  2025-07-14_set_file_workspace_id_cascade.py
app/modules/auth/: deps.py  exceptions.py  interface.py  routes.py  schemas.py  scheme.py  services.py  utils.py
app/modules/channels/: deps.py  exceptions.py  interface.py  models.py  routes.py  schemas.py  services.py
app/modules/channels/repos/: __init__.py  channel_repo.py  membership_repo.py
app/modules/files/: deps.py  exceptions.py  interface.py  models.py  repos.py  routes.py  s3_client.py  schemas.py  services.py
app/modules/messages/: deps.py  exceptions.py  interface.py  models.py  routes.py  schemas.py  services.py
app/modules/messages/repos/: __init__.py  mention_repo.py  message_repo.py  reaction_repo.py
app/modules/notifications/async_tasks/: deps.py  interface.py  schemas.py  services.py  utils.py
app/modules/notifications/realtime/: deps.py  event_type.py  interface.py  services.py  socketio_app.py  (+1 more)
app/modules/users/: deps.py  exceptions.py  interface.py  models.py  repos.py  routes.py  schemas.py  services.py
app/modules/workspaces/: deps.py  exceptions.py  interface.py  models.py  routes.py  schemas.py  services.py
(+6 files in other folders)
