[project]
name = "slack-clone-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "alembic>=1.16.4",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.6",
    "fastapi[all]>=0.116.1",
    "greenlet>=3.2.3",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "python-slugify>=8.0.4",
    "python-socketio>=5.13.0",
    "sentry-sdk>=2.33.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.3",
]
